	  doc/sane.man doc/sane-ibm.man doc/.cvsignore 
	  doc/descriptions/ibm.desc: Added IBM backend for the 
	  IBM 2456, the Ricoh IS-420 and maybe the IS-410 and IS-430 from
	  mf <massifr@tiscalinet.it>. Added manual page, fixed some
	  warnings, Added detection for IS-410 and IS-430.
	* doc/descriptions-external/ibm.desc: Removed, now included in
	  SANE distribution.
	
2003-04-14  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* tools/sane-desc.c: Fixed some HTML bugs.
	* doc/desccriptions/unsupported.desc: Updated HP Scanjet 35XX,
	  Medion MD 6228, and Umax Astra 4700 entries. Added some Mustek
	  and Primax scanners.

2003-04-14  Peter Kirchgessner <peter@kirchgessner.net>

	* backend/hp.c, hp-option.c: Check pointers received in
	  sane_control_option(). Caused saned to crash on
	  scanimage --help -d net:localhost:hp:...

2003-04-13  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/sane.man: Added SEE ALSO section.
	* backend/Makefile.in: Fixed warning for dll-preload.c.
	* bakend/dll.c: Add casts to function calls. Without this fix, the
	  dll backend didn't work on the m68k paltform because data and
	  addresses are stored in differnt registers so the return values
	  of the sane api functions were wrong. Patch from Dave Huang
	  <khym@azeotrope.org>. Fixed some compilation warnings.

2003-04-11  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/gt68xx.c backend/gt68xx_devices.c doc/sane-gt68xx.man
	  doc/descriptions/gt68xx.desc doc/gt68xx/gt68xx.CHANGES: Updated
	  Mustek BearPaw 1200 CU Plus white strip value. Set Mustek
	  ScanExpress A3 USB to CCD. Black mark may be still wrong. Minor
	  formatting changes in the manpage.  Decreased ScanExpress A3 USB
	  status to alpha because of CIS/CCD change.
	* backend/ma1509.c: Remove test for multi-pass.
	* doc/sane.man: Added information about #sane IRC
	  channel. Formatting changes.
	* doc/descriptions/unsupported.desc: Added Mustek P 3600 A3 Pro.